force-app/main/default/objects/Intapp_Resource__c/fields/Survey_Complete__c.field-meta.xml
<CustomField>
    <fullName>Survey_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please check this box when the survey has been completed.</inlineHelpText>
    <label>Survey Complete</label>
    <type>Checkbox</type>
</CustomField>