force-app/main/default/objects/Intapp_Resource__c/fields/Survey_Number__c.field-meta.xml
<CustomField>
    <fullName>Survey_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>What is the survey number that this Intapp Resource belongs to?</inlineHelpText>
    <label>Survey Number</label>
    <referenceTo>SFDC_Survey__c</referenceTo>
    <relationshipLabel>Intapp Resources</relationshipLabel>
    <relationshipName>Intapp_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>