force-app/main/default/objects/Intapp_Resource__c/fields/Survey_Type__c.field-meta.xml
<CustomField>
    <fullName>Survey_Type__c</fullName>
    <description>Controlling picklist to determine the Intapp Resource Type picklist values.</description>
    <inlineHelpText>Is this a resource for a Consulting Survey or a Project Closing Survey?</inlineHelpText>
    <label>Survey Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Project Closing Survey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>